Update : added icons

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheet.css">   
   </head>
   <body>
-    <h1>AI Text Summarizer App</h1>
+    <h1>AI Text Summarizer App 🤖</h1>
     
     <p> Simply paste your text into the text area below and click the "Submit" button. </p>
     <div class="container">
